[BUGFIX] Fix issue with notifications hidden under menu.
Resolves: #497

--- a/Packages/Beech/Beech.Ehrm/Resources/Public/StyleSheets/main.css
+++ b/Packages/Beech/Beech.Ehrm/Resources/Public/StyleSheets/main.css
@@ -1,3 +1,9 @@
 body {
 	padding: 60px;
 }
+
+/* Notifications */
+.midgardNotifications-container, .midgardNotifications-item-outer{
+	z-index:10001;
+	width: 150px;
+}
